messageAPI実装
